fix the table style in the link relation html file

--- a/backend/static/link-relations.html
+++ b/backend/static/link-relations.html
@@ -13,8 +13,8 @@
       <table id="table-link-relations-1" class="sortable" cellspacing="10">
         <thead>
           <tr>
-            <th>Relation Name</th>
-            <th>Description</th>
+            <th style="text-align: left">Relation Name</th>
+            <th style="text-align: left">Description</th>
           </tr>
         </thead>
         <tbody>
