add the current user endpoint to the mason documentation

--- a/backend/static/link-relations.html
+++ b/backend/static/link-relations.html
@@ -19,6 +19,10 @@
         </thead>
         <tbody>
           <tr>
+            <td>current-user</td>
+            <td>Refers to the resource that can be used to retrieve information about the currently logged-in user.</td>
+          </tr>
+          <tr>
             <td>users-all</td>
             <td>Refers to the list of all existing users</td>
           </tr>
