add the login link relation to the html file

--- a/backend/static/link-relations.html
+++ b/backend/static/link-relations.html
@@ -19,6 +19,10 @@
         </thead>
         <tbody>
           <tr>
+            <td>login</td>
+            <td>Refers to the external login resource provided by the authentication provider.</td>
+          </tr>
+          <tr>
             <td>current-user</td>
             <td>Refers to the resource that can be used to retrieve information about the currently logged-in user.</td>
           </tr>
